# plugin_service

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  build.rs  rustfmt.toml
migrations/2026-03-27-125449-0000_create_users/: up.sql
migrations/2026-03-27-125610-0000_create_plugins/: up.sql
migrations/2026-03-28-032209-0000_add_user_roles/: up.sql
migrations/2026-03-29-061533-0000_bigint_tables/: down.sql  up.sql
migrations/2026-03-29-083937-0000_bigint_plugins/: down.sql  up.sql
migrations/2026-03-31-000000-0000_add_plugin_status/: down.sql  up.sql
migrations/2026-04-04-000000_refactor_plugins_and_tags/: down.sql  up.sql
migrations/2026-04-04-000001_create_user_plugins/: down.sql  up.sql
migrations/2026-04-05-024852-0000_rename_draft_to_drafted/: down.sql  up.sql
migrations/2026-04-05-025445-0000_add_status_to_plugins/: down.sql  up.sql
migrations/2026-04-05-032005-0000_add_github_repo_to_plugins/: down.sql  up.sql
src/: config.rs  error.rs  main.rs  schema.rs  state.rs
src/controllers/: mod.rs  plugin_controller.rs
src/core/: mod.rs
src/core/auth/: jwt.rs
src/core/plugin/: model.rs  service.rs
src/core/user/: model.rs  service.rs
src/infrastructure/: database.rs  s3.rs
src/ui/: health.rs  mod.rs
src/ui/middlewares/: auth.rs  cors.rs  helmet.rs  logger.rs  mod.rs  validator.rs  wrapper.rs
src/ui/v1/: mod.rs  plugin.rs  user.rs
