[package]
name = "plugin_service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
diesel = { version = "2.3.7", features = ["postgres", "r2d2"] }
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
