[package]
name = "plugin_service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "trace", "catch-panic", "set-header"] }
diesel = { version = "2.3.7", features = ["postgres", "r2d2", "chrono"] }
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
jsonwebtoken = "9.3.0"
chrono = { version = "0.4.39", features = ["serde"] }
bcrypt = "0.17.0"
axum-extra = { version = "0.10.0", features = ["cookie", "typed-header"] }
axum-helmet = "1.0.1"
async-trait = "0.1"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.21.0"
aws-smithy-runtime-api = "1.1.7"
uuid = { version = "1.8.0", features = ["v4"] }
serde_with = "3.8.1"
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
